<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/instructions_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/instructions_label"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/instructions_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/instructions_line1"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/instructions_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/instructions_line2"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/instructions_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/instructions_line3"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/instructions_line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/instructions_line4"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/username_input_hint"
        android:inputType="textShortMessage"
        android:textSize="20sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/start"
        android:textSize="20sp" />

</LinearLayout>