<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/username_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="" />

    <EditText
        android:id="@+id/move_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/move_input_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/play_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:text="@string/play_move"
        android:visibility="visible" />

    <TextView
        android:id="@+id/game_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text=""
        android:visibility="invisible" />

    <TextView
        android:id="@+id/computer_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text=""
        android:visibility="invisible" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:text="@string/reset"
        android:visibility="invisible" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="6"
        android:columnCount="6"
        android:background="@color/black" >
        <TableRow
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/pos0"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos1"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos2"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos3"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos4"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos5"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
        </TableRow>
        <TableRow
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/pos6"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos7"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/pos8"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/pos9"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/pos10"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/pos11"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
        </TableRow>
        <TableRow
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/pos12"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos13"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos14"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos15"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos16"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos17"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
        </TableRow>
        <TableRow
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/pos18"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos19"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos20"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos21"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos22"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos23"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
        </TableRow>
        <TableRow
            android:gravity="center_horizontal" >
            <ImageView
                android:id="@+id/pos24"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos25"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos26"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos27"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos28"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos29"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
        </TableRow>
        <TableRow
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/pos30"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />

            <ImageView
                android:id="@+id/pos31"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos32"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos33"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos34"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
            <ImageView
                android:id="@+id/pos35"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/empty" />
        </TableRow>
    </TableLayout>


</LinearLayout>

